[package]
name = "iced_drop"
version = "0.2.2-dev"
rust-version = "1.92.0"
edition = "2024"

[dependencies]
iced_core = "0.15.0-dev"
iced_widget = "0.15.0-dev"
iced_runtime = { version = "0.15.0-dev", optional = true }

[workspace]
members = ["examples/*"]

[workspace.dependencies]
iced = {version = "0.15.0-dev"}

[features]
helpers = ["iced_runtime"]

[patch.crates-io]
iced_core = { git = "https://github.com/iced-rs/iced", package = "iced_core" }
iced_widget = { git = "https://github.com/iced-rs/iced", package = "iced_widget" }
iced_runtime = { git = "https://github.com/iced-rs/iced", package = "iced_runtime" }
iced = { git = "https://github.com/iced-rs/iced" }
